@@ -4,11 +4,13 @@
 == HEAD
 * Payu Latam - Update error code method to surface network code [yunnydang] #4773
 * CyberSource: Handling Canadian bank accounts [heavyblade] #4764
+* CommerceHub: Enabling multi-use public key encryption [jherreraa] #4771
 * CyberSource Rest: Fixing currency detection [heavyblade] #4777
 * CyberSource: Allow business rules for requests with network tokens [aenand] #4764
 * Adyen: Update Mastercard error messaging [kylene-spreedly] #4770
 * Authorize.net: Update mapping for billing address phone number [jcreiff] #4778
 * Braintree: Update mapping for billing address phone number [jcreiff] #4779
+* CommerceHub: Enabling multi-use public key encryption [jherreraa] #4771
 
 == Version 1.129.0 (May 3rd, 2023)
 * Adyen: Update selectedBrand mapping for Google Pay [jcreiff] #4763
